--- a/mantu/package.json
+++ b/mantu/package.json
@@ -27,6 +27,7 @@
     "jest": "^30.0.2",
     "jest-environment-node": "^30.0.2",
     "jest-util": "^30.0.2",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "22.1.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.4.0",
@@ -39,7 +40,8 @@
   "workspaces": [
     "packages/*",
     "api",
-    "api-e2e"
+    "api-e2e",
+    "shared"
   ],
   "dependencies": {
     "@nestjs/common": "^11.0.0",
